Update .gitignore file to include new file types

--- a/ddbs/index.html
+++ b/ddbs/index.html
@@ -123,132 +123,137 @@
           program are based on the trens analysis in section 1.
         </p>
         <h3>Business Management Student Personas</h3>
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Characteristics</th>
-              <th scope="col">
-                Current Student<br />"Alex - The Adaptable Analyst"
-              </th>
-              <th scope="col">
-                3-Year Future Student<br />"Layla - The Sustainable Strategist"
-              </th>
-              <th scope="col">
-                7-Year Future Student<br />"Riley - The Quantum Quotient Leader"
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Profile Picture</td>
-              <td>
-                <img
-                  src="alex.png"
-                  alt="Profile Image for Alex"
-                />
-              </td>
-              <td>
-                <img
-                  src="layla.png"
-                  alt="Profile Image for Layla"
-                />
-              </td>
-              <td>
-                <img
-                  src="rick.png"
-                  alt="Profile Image for Riley"
-                />
-              </td>
-            </tr>
-            <tr>
-              <td>Goals</td>
-              <td>
-                Understand basics of business management. Gain proficiency in
-                business software. Secure a tech-forward internship.
-              </td>
-              <td>
-                Master sustainable business practices. Proficient in industry
-                cloud platforms. Lead corporate sustainability initiatives.
-              </td>
-              <td>
-                Leverage quantum computing in business. Innovate with
-                AI-augmented development. Lead in creating ethical AI policies.
-              </td>
-            </tr>
-            <tr>
-              <td>Background</td>
-              <td>
-                Gen Z, digital native, social media savvy, AP courses in
-                economics/statistics.
-              </td>
-              <td>
-                Climate activism in high school, interested in tech-driven
-                sustainability.
-              </td>
-              <td>
-                Grew up with AI and quantum computing, basic coding skills,
-                ethical tech considerations.
-              </td>
-            </tr>
-            <tr>
-              <td>Behaviors</td>
-              <td>
-                Mix of traditional and digital media learning, online forums,
-                industry social media following.
-              </td>
-              <td>
-                Digital, interactive learning tools, sustainability challenges,
-                hackathons.
-              </td>
-              <td>Uses AI assistants, online business simulations.</td>
-            </tr>
-            <tr>
-              <td>Preferred Touchpoints</td>
-              <td>
-                University LMS, educational platforms, social media for
-                networking.
-              </td>
-              <td>
-                VR simulations, sustainability-focused online courses, industry
-                cloud platforms.
-              </td>
-              <td>
-                AR/VR immersive environments, quantum computing and AI
-                platforms.
-              </td>
-            </tr>
-            <tr>
-              <td>Pain Points</td>
-              <td>
-                Balance between tech use and traditional learning, keeping up
-                with software changes.
-              </td>
-              <td>
-                Overwhelmed by plethora of tools, finding credible sustainable
-                practices information.
-              </td>
-              <td>
-                Pace of tech change vs. ethical issues, integrating AI without
-                losing human touch.
-              </td>
-            </tr>
-            <tr>
-              <td>Needs</td>
-              <td>
-                Access to business management software, real-world skill
-                application, job market guidance.
-              </td>
-              <td>
-                Tools for sustainability impact analysis, green tech internship
-                experience.
-              </td>
-              <td>
-                Ethical tech frameworks, opportunities to apply quantum
-                computing and AI in business.
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Characteristics</th>
+                <th scope="col">
+                  Current Student<br />"Alex - The Adaptable Analyst"
+                </th>
+                <th scope="col">
+                  3-Year Future Student<br />"Layla - The Sustainable
+                  Strategist"
+                </th>
+                <th scope="col">
+                  7-Year Future Student<br />"Riley - The Quantum Quotient
+                  Leader"
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Profile Picture</td>
+                <td>
+                  <img
+                    src="alex.png"
+                    alt="Profile Image for Alex"
+                  />
+                </td>
+                <td>
+                  <img
+                    src="layla.png"
+                    alt="Profile Image for Layla"
+                  />
+                </td>
+                <td>
+                  <img
+                    src="rick.png"
+                    alt="Profile Image for Riley"
+                  />
+                </td>
+              </tr>
+              <tr>
+                <td>Goals</td>
+                <td>
+                  Understand basics of business management. Gain proficiency in
+                  business software. Secure a tech-forward internship.
+                </td>
+                <td>
+                  Master sustainable business practices. Proficient in industry
+                  cloud platforms. Lead corporate sustainability initiatives.
+                </td>
+                <td>
+                  Leverage quantum computing in business. Innovate with
+                  AI-augmented development. Lead in creating ethical AI
+                  policies.
+                </td>
+              </tr>
+              <tr>
+                <td>Background</td>
+                <td>
+                  Gen Z, digital native, social media savvy, AP courses in
+                  economics/statistics.
+                </td>
+                <td>
+                  Climate activism in high school, interested in tech-driven
+                  sustainability.
+                </td>
+                <td>
+                  Grew up with AI and quantum computing, basic coding skills,
+                  ethical tech considerations.
+                </td>
+              </tr>
+              <tr>
+                <td>Behaviors</td>
+                <td>
+                  Mix of traditional and digital media learning, online forums,
+                  industry social media following.
+                </td>
+                <td>
+                  Digital, interactive learning tools, sustainability
+                  challenges, hackathons.
+                </td>
+                <td>Uses AI assistants, online business simulations.</td>
+              </tr>
+              <tr>
+                <td>Preferred Touchpoints</td>
+                <td>
+                  University LMS, educational platforms, social media for
+                  networking.
+                </td>
+                <td>
+                  VR simulations, sustainability-focused online courses,
+                  industry cloud platforms.
+                </td>
+                <td>
+                  AR/VR immersive environments, quantum computing and AI
+                  platforms.
+                </td>
+              </tr>
+              <tr>
+                <td>Pain Points</td>
+                <td>
+                  Balance between tech use and traditional learning, keeping up
+                  with software changes.
+                </td>
+                <td>
+                  Overwhelmed by plethora of tools, finding credible sustainable
+                  practices information.
+                </td>
+                <td>
+                  Pace of tech change vs. ethical issues, integrating AI without
+                  losing human touch.
+                </td>
+              </tr>
+              <tr>
+                <td>Needs</td>
+                <td>
+                  Access to business management software, real-world skill
+                  application, job market guidance.
+                </td>
+                <td>
+                  Tools for sustainability impact analysis, green tech
+                  internship experience.
+                </td>
+                <td>
+                  Ethical tech frameworks, opportunities to apply quantum
+                  computing and AI in business.
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </section>
       <section class="m-3">
         <h2>Business Management Course Programs</h2>
