Update images and styles in index.html

--- a/ddbs/index.html
+++ b/ddbs/index.html
@@ -15,14 +15,16 @@
   </head>
   <body>
     <div class="container mt-4">
-      <h1>Higher Education in Business Management Trend Report</h1>
-      <!-- Placeholder for the heatmap image -->
-      <img
-        class="mt-5"
-        src="trends.png"
-        alt="Technology Heatmap"
-        style="width: 80%; height: auto"
-      />
+      <section class="m-4">
+        <h1>Higher Education in Business Management Trend Report</h1>
+        <!-- Placeholder for the heatmap image -->
+        <img
+          class="mt-5 img-fluid"
+          src="trends.png"
+          alt="Technology Heatmap"
+          style="width: 80%; height: auto"
+        />
+      </section>
 
       <section class="m-4">
         <h2>Tech Trends in Higher Education for Business Management</h2>
@@ -124,7 +126,7 @@
         </p>
         <h3>Business Management Student Personas</h3>
         <div class="table-responsive">
-          <table class="table">
+          <table class="table table-hover">
             <thead>
               <tr>
                 <th scope="col">Characteristics</th>
@@ -146,18 +148,21 @@
                 <td>Profile Picture</td>
                 <td>
                   <img
+                    class="img-fluid"
                     src="alex.png"
                     alt="Profile Image for Alex"
                   />
                 </td>
                 <td>
                   <img
+                    class="img-fluid"
                     src="layla.png"
                     alt="Profile Image for Layla"
                   />
                 </td>
                 <td>
                   <img
+                    class="img-fluid"
                     src="rick.png"
                     alt="Profile Image for Riley"
                   />
