--- a/ddbs/index.html
+++ b/ddbs/index.html
@@ -122,7 +122,7 @@
         <h2>Future Student Profiles</h2>
         <p>
           The following student personas for a typical Business Management
-          program are based on the trens analysis in section 1.
+          program are based on the trend analysis in section 1.
         </p>
         <h3>Business Management Student Personas</h3>
         <div class="table-responsive">
