--- a/ddbs/index.html
+++ b/ddbs/index.html
@@ -138,7 +138,7 @@
                   Strategist"
                 </th>
                 <th scope="col">
-                  7-Year Future Student<br />"Riley - The Quantum Quotient
+                  7-Year Future Student<br />"Rick - The Quantum Quotient
                   Leader"
                 </th>
               </tr>
